--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 *{
-    background-color: #e5e5e5;
     font-family: 'Inter', sans-serif;
     
 
@@ -7,6 +6,8 @@
 
 body{
     min-height: 100vh;
+    background-color: #e5e5e5;
+
 }
 
 .vh-88{
@@ -15,6 +16,11 @@ body{
 
 .logo{
     margin-top: 30%;
+}
+
+#inicio{
+    max-height: 34%;
+    margin: auto 0;
 }
 
 .primary-button{
@@ -45,24 +51,26 @@ body{
 /*Aquí comienza el css de la página de agregar palabra*/
 
 .input-text{
-    height: 50%;
+    height: 5%;
     border: 0;
     font-size: 2rem;
     line-height: 4rem;
     color: darkblue;
     resize: none;
-    margin-bottom: 20%;
+    background-color: #e5e5e5;
+    margin: 25% 0 50% 0;
 }
 
 .indicador{
     font-size: 0.9rem;
     color: #495057;
     opacity: 80%;
+    margin: 10% 0 0 0;
 }
 
 .default-primary-button,.default-secondary-button{
     margin: 2%;
-    padding: 1rem;
+    padding: 0.5rem;
     border-radius: 24px;
     font-size: 1.1rem;
 }
@@ -77,18 +85,43 @@ body{
     color: #0A3871;
 }
 
+.dibujo-ahorcado{
+    margin: 15% 0 -20% 0;
+    text-align: center;
+}
+
+#letras-erradas{
+    height: 4%;
+    color: grey;
+    /* padding-top: 5%; */
+    text-transform: uppercase;
+    margin-top:5%;
+    font-size: 3rem;
+    text-align: center;
+
+}
+
+.modal-body p{
+    font-size: 2rem;
+    color: #0A3871;
+    text-align: center;
+}
+
 #imagen-loser{
-    width:100%;
+    height:100%;
+    margin: 0 35%;
 }
 
 #imagen-winner{
-    width: 100%;
-    margin: 100% 0;
+    width: 50%;
+    margin: 0 25%;
 }
 
 #palabra{
     display: flex;
     justify-content: center;
+    height: 10%;
+    margin-top: 30%;
 }
 
 .letra{
