--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,13 @@
 }
 
 body{
-    min-height: 100vh;
+    /* min-height: 100vh; */
     background-color: #e5e5e5;
 
 }
 
 .vh-88{
-    height: 88vh
+    height: 88vh;
 }
 
 .logo{
@@ -48,12 +48,14 @@ body{
 .diseño{
     height: 12vh;
 }
+
+
 /*Aquí comienza el css de la página de agregar palabra*/
 
 .input-text{
     height: 5%;
     border: 0;
-    font-size: 2rem;
+    font-size: 1.7rem;
     line-height: 4rem;
     color: darkblue;
     resize: none;
@@ -73,6 +75,8 @@ body{
     padding: 0.5rem;
     border-radius: 24px;
     font-size: 1.1rem;
+    width: 45%;
+    height: 100%;
 }
 
 .default-primary-button{
@@ -86,8 +90,10 @@ body{
 }
 
 .dibujo-ahorcado{
-    margin: 15% 0 -20% 0;
+    /* margin: 10% 0 -10% 0; */
     text-align: center;
+    height: 60%;
+    align-items: center;
 }
 
 #letras-erradas{
@@ -95,10 +101,9 @@ body{
     color: grey;
     /* padding-top: 5%; */
     text-transform: uppercase;
-    margin-top:5%;
-    font-size: 3rem;
+    /* margin-top: 6%; */
+    font-size: 2rem;
     text-align: center;
-
 }
 
 .modal-body p{
@@ -108,41 +113,41 @@ body{
 }
 
 #imagen-loser{
-    height:100%;
-    margin: 0 35%;
+    height: 50vh;
+    margin: 0 40%;
 }
 
 #imagen-winner{
-    width: 50%;
-    margin: 0 25%;
+    width: 40vh;
+    margin: 0 30%;
 }
 
 #palabra{
     display: flex;
     justify-content: center;
-    height: 10%;
-    margin-top: 30%;
+    /* height: 10%; */
+    /* margin-top: 10%; */
 }
 
 .letra{
-    width: 80px;
-    height: 92px;
+    width: 5rem;
+    height: 5rem;
     margin: 0 2%;
 }
 
 .letra div{
-    width: 80px;
-    height: 4px;
+    width: 5rem;
+    height: 0.25rem;
     background: #0A3871;
     border-radius: 8px;
 }
 
 .letra span{
     color: #0A3871;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 48px;
-    line-height: 150%;
+    /* font-style: normal; */
+    /* font-weight: 400; */
+    font-size: 3rem;
+    /* line-height: 150%; */
     text-align: center;
     min-height: 100%;
 }
