--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ body{
     border-radius: 24px;
     font-size: 1.1rem;
     width: 45%;
-    height: 100%;
+    min-height:71px;
 }
 
 .default-primary-button{
@@ -99,9 +99,7 @@ body{
 #letras-erradas{
     height: 4%;
     color: grey;
-    /* padding-top: 5%; */
     text-transform: uppercase;
-    /* margin-top: 6%; */
     font-size: 2rem;
     text-align: center;
 }
